package dk.au.mad21spring.animalbank;

public interface IAnimalListActionListener {
    void onAnimalPressed(AnimalFireStoreModel animal);
}
